# python-mimeparse

./: mimeparse.py  pyproject.toml
.github/workflows/: run-test.yaml
